--- a/app/src/main/res/layout/custom_view_fragment_infonew.xml
+++ b/app/src/main/res/layout/custom_view_fragment_infonew.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:id="@+id/bg_info_new"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/d20"
     android:layout_marginLeft="@dimen/d10"
     android:layout_marginRight="@dimen/d10"
     android:layout_marginTop="@dimen/d20"
-    android:layout_marginBottom="@dimen/d20"
-    android:background="@drawable/bg_info_new"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imgInfo"
-        android:layout_width="wrap_content"
+        android:adjustViewBounds="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/test_info" />
+        android:src="@drawable/img_video_youtube" />
 
     <TextView
         android:id="@+id/tvTitleInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/imgInfo"
-        android:layout_alignLeft="@+id/imgInfo"
-        android:layout_alignRight="@+id/imgInfo"
-        android:layout_margin="1dp"
+        android:layout_below="@id/imgInfo"
+        android:layout_marginTop="@dimen/d20"
         android:gravity="bottom"
-        android:lines="2"
         android:paddingBottom="@dimen/d20"
+        android:ellipsize="end"
+        android:lines="2"
         android:paddingLeft="@dimen/d20"
         android:paddingRight="@dimen/d20"
-        android:text="adasdadada"
-        android:textColor="@color/colorWhite"
-        android:textSize="@dimen/text18" />
+        android:textColor="@color/colorBlack"
+        android:textSize="@dimen/text18"
+        android:textStyle="bold" />
 </RelativeLayout>
