--- a/app/src/main/res/layout/fragment_list_diary_favorite.xml
+++ b/app/src/main/res/layout/fragment_list_diary_favorite.xml
@@ -37,7 +37,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_centerInParent="true"
                     android:layout_marginLeft="@dimen/d10"
-                    android:text="HOM NAY"
+                    android:text="HÔM NAY"
                     android:textColor="@color/colorWhite"
                     android:textSize="@dimen/text16" />
 
