--- a/app/src/main/res/layout/custom_chart_view.xml
+++ b/app/src/main/res/layout/custom_chart_view.xml
@@ -1,11 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:attrs="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    tools:context="com.MentalHealth.mental.home.login.view.LoginActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_data"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vpPagerSupporter"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true">
+
+        <com.rd.PageIndicatorView
+            android:id="@+id/pageIndicatorView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="48dp"
+            android:background="@color/colorRed"
+            app:piv_viewPager="@id/vpPager"
+            attrs:piv_padding="12dp"
+            attrs:piv_radius="8dp" />
+    </android.support.v4.view.ViewPager>
+</RelativeLayout>
