--- a/app/src/main/res/layout/fragment_diary_ditail.xml
+++ b/app/src/main/res/layout/fragment_diary_ditail.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -15,18 +15,20 @@
             android:orientation="vertical">
 
             <TextView
+                android:text="dadasda"
+                android:id="@+id/tvContentDiary"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:background="@color/colorRed"
+                android:background="@color/colorDiaryTextRed"
                 android:gravity="center"
-                android:text="thu 4-ngay 6 thang 6 nam 2018"
                 android:textColor="@color/colorWhite"
-                android:textSize="@dimen/text18"></TextView>
+                android:textSize="@dimen/text18" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/d20"
+                android:gravity="center"
                 android:layout_marginRight="@dimen/d20"
                 android:layout_marginTop="@dimen/d20"
                 android:orientation="vertical">
@@ -36,8 +38,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:lines="1"
+                    android:gravity="center"
                     android:text="Mot ngay gio hoi nhu bao ngay khac"
-                    android:textColor="@color/colorGray"
+                    android:textColor="@color/colorDiaryText"
                     android:textSize="@dimen/text20"
                     android:textStyle="bold" />
 
@@ -46,7 +49,7 @@
                     android:layout_height="1dp"
                     android:layout_marginLeft="@dimen/d60"
                     android:layout_marginRight="@dimen/d60"
-                    android:layout_marginTop="@dimen/d10"
+                    android:layout_marginTop="@dimen/d15"
                     android:background="@color/color70Gray" />
 
                 <TextView
@@ -59,7 +62,7 @@
             </LinearLayout>
 
         </LinearLayout>
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
     <ImageView
         android:id="@+id/imgDeleteDairyDetail"
@@ -67,8 +70,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
+        android:layout_marginBottom="@dimen/d20"
         android:layout_marginLeft="@dimen/d20"
         android:layout_marginRight="@dimen/d20"
-        android:layout_marginBottom="@dimen/d20"
         android:src="@drawable/ic_delete_big" />
 </RelativeLayout>
