--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,13 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayouts"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <include layout="@layout/toolbar"/>
+
+        <include
+            layout="@layout/toolbar" />
+
         <FrameLayout
             android:id="@+id/content_view"
             android:layout_width="fill_parent"
