--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,8 @@
     <color name="colorGreen204">#16a71c</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorBlack10">#1A000000</color>
+    <color name="colorDiaryText">#1a5b81</color>
+    <color name="colorDiaryTextRed">#e96268</color>
 
 
     <!--<color name="colorRed">#FF0000</color>-->
